feat: add header top

--- a/index.html
+++ b/index.html
@@ -19,7 +19,40 @@
 </head>
 
 <body>
-    <h1>Hello Word</h1>
+    <!-- HEADER -->
+    <header>
+        <!-- HEADER TOP -->
+        <div class="header-top">
+            <div class="language">
+                <img src="https://flagsapi.com/BR/shiny/64.png" />
+                <span>Português</span>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+
+            <div class="logo-senado">
+                <a href="https://www12.senado.leg.br/hpsenado" target="_blank">
+                    <img src="img/senado-logo.svg" alt="Logo do Senado Federal" />
+                </a>
+            </div>
+
+            <div class="socials">
+                <a href="https://www12.senado.leg.br/noticias/whatsapp" target="_blank"><i
+                        class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://www.instagram.com/senadofederal/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/senadofederal" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.youtube.com/user/TVSenadoOficial" target="_blank"><i
+                        class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.facebook.com/SenadoFederal/" target="_blank"><i
+                        class="fa-brands fa-facebook"></i></a>
+                <a href="https://t.me/SenadoNoTelegram" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://www.linkedin.com/company/senadofederal/" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.flickr.com/photos/agenciasenado/" target="_blank"><i
+                        class="fa-brands fa-flickr"></i></a>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
