feat: add header center

--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
                         class="fa-brands fa-flickr"></i></a>
             </div>
         </div>
+
+        <!-- HEADER CENTER -->
+        <div class="header-center">
+            <div class="menu">
+                <button><i class="fa-solid fa-bars"></i></button>
+                <img src="img/senadonoticias-logo.svg" alt="Logo do Senado Notícias" />
+            </div>
+
+            <div class="resources">
+                <a href="https://www12.senado.leg.br/institucional/responsabilidade-social/acessibilidade">Acessibilidade
+                    |</a>
+                <a href="https://www12.senado.leg.br/institucional/falecomosenado">Fale com o Senado</a>
+
+                <form class="menu-local_form" action="https://www12.senado.leg.br/noticias/busca">
+                    <div class="search-wrapper">
+                        <input type="search" placeholder="Buscar..." />
+                        <button class="search-btn" type="submit">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </header>
 </body>
 
