feat: add header bottom

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
             </div>
 
             <div class="resources">
-                <a href="https://www12.senado.leg.br/institucional/responsabilidade-social/acessibilidade">Acessibilidade
+                <a class="link-header"
+                    href="https://www12.senado.leg.br/institucional/responsabilidade-social/acessibilidade">Acessibilidade
                     |</a>
-                <a href="https://www12.senado.leg.br/institucional/falecomosenado">Fale com o Senado</a>
+                <a class="link-header" href="https://www12.senado.leg.br/institucional/falecomosenado">Fale com o
+                    Senado</a>
 
                 <form class="menu-local_form" action="https://www12.senado.leg.br/noticias/busca">
                     <div class="search-wrapper">
@@ -73,6 +75,45 @@
                         </button>
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <!-- HEADER BOTTOM -->
+        <div class="header-bottom">
+            <nav class="navbar">
+                <ul>
+                    <li>
+                        <a href="">Notícias</a>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </li>
+                    <li>
+                        <a href="">Especiais</a>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </li>
+                    <li>
+                        <a href="">Fotos</a>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </li>
+                    <li>
+                        <a href="">Serviços</a>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </li>
+                    <li>
+                        <a href="">Saiba mais</a>
+                        <i class="fa-solid fa-caret-down"></i>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="links">
+                <a class="link-header"
+                    href="https://www12.senado.leg.br/noticias/destaques/atos-de-8-de-janeiro/pagina/1">Atos
+                    antidemocráticos de 8 de janeiro</a>
+                <a class="link-header"
+                    href="https://www12.senado.leg.br/noticias/destaques/reforma-tributaria/pagina/1">Reforma
+                    Tributária</a>
+                <a class="link-header"
+                    href="https://www12.senado.leg.br/noticias/destaques/senado-200-anos/pagina/1">Senado 200 anos</a>
             </div>
         </div>
     </header>
