feat: add dropdown menu

--- a/index.html
+++ b/index.html
@@ -83,22 +83,66 @@
             <nav class="navbar">
                 <ul>
                     <li>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/noticias/ultimas">Últimas</a>
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/noticias/maisvistas">Mais
+                                vistas</a>
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/tags/Pronunciamento">Pronunciamentos</a>
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/retrancas/projetos">Projetos de lei</a>
+                        </div>
                         <a href="">Notícias</a>
                         <i class="fa-solid fa-caret-down"></i>
                     </li>
+
                     <li>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/infomaterias">Reportagens</a>
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/especiais/arquivo-s">Arquivo S</a>
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/noticias/tags/Web%20Stories">Web
+                                Stories</a>
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/noticias/ao-vivo">Grandes
+                                coberturas</a>
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/acervo-historico">Acervo</a>
+                        </div>
                         <a href="">Especiais</a>
                         <i class="fa-solid fa-caret-down"></i>
                     </li>
+
                     <li>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/fotos/busca">Banco de imagens</a>
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/noticias/galerias">Galeria</a>
+                        </div>
                         <a href="">Fotos</a>
                         <i class="fa-solid fa-caret-down"></i>
                     </li>
+
                     <li>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/multimidia">Senado Multimídia</a>
+                            <a class="dropdown-item" href="#">Notificações</a>
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/newsletter">Newsletter</a>
+                        </div>
                         <a href="">Serviços</a>
                         <i class="fa-solid fa-caret-down"></i>
                     </li>
+
                     <li>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/glossario-legislativo">Glossário
+                                legislativo</a>
+                            <a class="dropdown-item"
+                                href="https://www12.senado.leg.br/noticias/entenda-o-assunto">Entenda o assunto</a>
+                            <a class="dropdown-item" href="https://www12.senado.leg.br/manualdecomunicacao">Manual de
+                                Comunicação</a>
+                        </div>
                         <a href="">Saiba mais</a>
                         <i class="fa-solid fa-caret-down"></i>
                     </li>
