feat: add title pattern

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <a class="dropdown-item"
                                 href="https://www12.senado.leg.br/noticias/retrancas/projetos">Projetos de lei</a>
                         </div>
-                        <a href="">Notícias</a>
+                        <a href="#">Notícias</a>
                         <i class="fa-solid fa-caret-down"></i>
                     </li>
 
@@ -161,6 +161,16 @@
             </div>
         </div>
     </header>
+
+    <main class="main">
+        <div class="container">
+            <div class="title">
+                <span></span>
+                <h1>Príncipais notícias</h1>
+                <span></span>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
