feat: add card news pattern

--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
                 <h1>Príncipais notícias</h1>
                 <span></span>
             </div>
+
+            <a class="card-news" href="">
+                <img class="img-news" src="img/news1.png" alt="Senado inicia" />
+                <h3 class="title-news">Pioneiro, Senado inicia 3º Plano de Equidade de Gênero e Raça</h3>
+            </a>
         </div>
     </main>
 </body>
