feat: add card espeical pattern

--- a/index.html
+++ b/index.html
@@ -174,6 +174,29 @@
                 <img class="img-news" src="img/news1.png" alt="Senado inicia" />
                 <h3 class="title-news">Pioneiro, Senado inicia 3º Plano de Equidade de Gênero e Raça</h3>
             </a>
+
+            <a class="card-especial" href="#">
+                <div class="card-especial-header">
+                    <img class="img-especial" src="img/especial1.png" alt="Imagem da notícia" />
+                    <div>
+                        <span class="card-tag">Saúde</span>
+                        <p class="card-date">Segunda - 04/03/2024</p>
+                    </div>
+                </div>
+
+                <div class="card-especial-content">
+                    <h3 class="card-especial-title">Dengue: clima, água parada e falhas do poder público causaram
+                        explosão
+                        de casos</h3>
+                    <p class="card-especial-text">Tudo indica que o Brasil enfrentará em 2024 a pior epidemia de
+                        dengue
+                        da história.</p>
+                    <div class="card-especial-info">
+                        Saiba mais
+                        <i class="fa-solid fa-circle-info"></i>
+                    </div>
+                </div>
+            </a>
         </div>
     </main>
 </body>
