feat: add card simple

--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
                     </div>
                 </div>
             </a>
+
+            <a href="" class="card-simple">
+                <img class="simple-card-img" src="img/especial1.png" alt="Mosquito da dengue" />
+                <h3 class="simple-card-text">Senado volta a analisar divulgação obrigatória de fila de cirurgias no SUS
+                </h3>
+            </a>
         </div>
     </main>
 </body>
