feat: add home section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
         </div>
     </header>
 
-    <main class="main">
+    <!-- HOME -->
+    <main>
         <div class="container">
             <div class="title">
                 <span></span>
@@ -170,39 +171,86 @@
                 <span></span>
             </div>
 
-            <a class="card-news" href="">
-                <img class="img-news" src="img/news1.png" alt="Senado inicia" />
-                <h3 class="title-news">Pioneiro, Senado inicia 3º Plano de Equidade de Gênero e Raça</h3>
-            </a>
-
-            <a class="card-especial" href="#">
-                <div class="card-especial-header">
-                    <img class="img-especial" src="img/especial1.png" alt="Imagem da notícia" />
-                    <div>
-                        <span class="card-tag">Saúde</span>
-                        <p class="card-date">Segunda - 04/03/2024</p>
+            <div class="home">
+                <a href="" class="news-link">
+                    <div class="main-news">
+                        <img src="img/img2.jpeg" alt="" />
+                        <div class="overlay">
+                            <div class="main-content">
+                                <h2>Cédula de crédito pública em favor de microempresa está na pauta do Plenário</h2>
+                                <p>O Projeto de Lei Complementar (PLP) 137/2019, de Flávio Arns, tem relatório favorável
+                                    de
+                                    Oriovisto
+                                    Guimarães.</p>
+                            </div>
+                        </div>
                     </div>
+                </a>
+
+                <div class="right">
+                    <a href="https://www12.senado.leg.br/noticias/25anos"><img src="img/espelho.png"
+                            alt="Agência Senado 27 anos" /></a>
+                    <div class="tab-content">
+                        <div class="tab-buttons">
+                            <button class="tab-btn active">Últimas</button>
+                            <button class="tab-btn">Mais vistas</button>
+                        </div>
+                        <div class="tab-wrapper">
+                            <div class="tab-links" id="last">
+
+                                <ul>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                </ul>
+                            </div>
+                            <div class="tab-links" id="more">
+
+                                <ul>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                    <li><a href="">CAE pode votar nova regra para investimentos em startups</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <a href="" class="vejamais">Veja mais ></a>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="news-wrapper">
+                <div class="news-area">
+                    <a class="card-news" href="">
+                        <img class="img-news" src="img/news1.png" alt="Senado inicia" />
+                        <h3 class="title-news">Pioneiro, Senado inicia 3º Plano de Equidade de Gênero e Raça</h3>
+                    </a>
+
+                    <a class="card-news" href="">
+                        <img class="img-news" src="img/news1.png" alt="Senado inicia" />
+                        <h3 class="title-news">Pioneiro, Senado inicia 3º Plano de Equidade de Gênero e Raça</h3>
+                    </a>
+
+                    <a class="card-news" href="">
+                        <img class="img-news" src="img/news1.png" alt="Senado inicia" />
+                        <h3 class="title-news">Pioneiro, Senado inicia 3º Plano de Equidade de Gênero e Raça</h3>
+                    </a>
                 </div>
 
-                <div class="card-especial-content">
-                    <h3 class="card-especial-title">Dengue: clima, água parada e falhas do poder público causaram
-                        explosão
-                        de casos</h3>
-                    <p class="card-especial-text">Tudo indica que o Brasil enfrentará em 2024 a pior epidemia de
-                        dengue
-                        da história.</p>
-                    <div class="card-especial-info">
-                        Saiba mais
-                        <i class="fa-solid fa-circle-info"></i>
-                    </div>
-                </div>
-            </a>
 
-            <a href="" class="card-simple">
-                <img class="simple-card-img" src="img/especial1.png" alt="Mosquito da dengue" />
-                <h3 class="simple-card-text">Senado volta a analisar divulgação obrigatória de fila de cirurgias no SUS
-                </h3>
-            </a>
+                <a class="multimidia-link" href="https://www12.senado.leg.br/multimidia">
+                    <div class="multimidia">
+                        <img class="multimidia-logo" src="img/multimidia-logo.png" alt="Senado Multimídia" />
+                        <span></span>
+
+                        <img class="cover-img" src="img/img3.jpg" alt="Congresso Nacional" />
+                        <p>Assista, recorte, baixe e compartilhe os vídeos do Senado</p>
+                    </div>
+                </a>
+
+            </div>
         </div>
     </main>
 </body>
