feat: add section web stories and especials

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -253,6 +255,113 @@
             </div>
         </div>
     </main>
+
+    <section class="story-especial">
+        <div class="container section-wrapper">
+            <!-- ### WEB STORIES ### -->
+            <div class="web-stories">
+                <div class="subtitle">
+                    <a href="https://www12.senado.leg.br/noticias/tags/Web%20Stories">Web Stories</a>
+                    <span></span>
+                </div>
+
+                <!-- ### SWIPER ### -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="img/story1.png" alt="Abdias Nascimento" /></div>
+                        <div class="swiper-slide"><img src="img/story2.png" alt="Genocídio Negro" /></div>
+                        <div class="swiper-slide"><img src="img/story3.png" alt="Cultura Africana" /></div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+
+            <!-- ### ESPECIAIS ### -->
+            <div class="especials">
+                <div class="subtitle">
+                    <a href="https://www12.senado.leg.br/noticias/tags/Web%20Stories">Especiais</a>
+                    <span></span>
+                </div>
+
+                <div class="especials-area">
+                    <a class="card-especial" href="#">
+                        <div class="card-especial-header">
+                            <img class="img-especial" src="img/especial1.png" alt="Imagem da notícia" />
+                            <div>
+                                <span class="card-tag">Saúde</span>
+                                <p class="card-date">Segunda - 04/03/2024</p>
+                            </div>
+                        </div>
+
+                        <div class="card-especial-content">
+                            <h3 class="card-especial-title">Dengue: clima, água parada e falhas do poder público
+                                causaram
+                                explosão
+                                de casos</h3>
+                            <p class="card-especial-text">Tudo indica que o Brasil enfrentará em 2024 a pior epidemia de
+                                dengue
+                                da história.</p>
+                            <div class="card-especial-info">
+                                Saiba mais
+                                <i class="fa-solid fa-circle-info"></i>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="card-especial" href="#">
+                        <div class="card-especial-header">
+                            <img class="img-especial" src="img/especial1.png" alt="Imagem da notícia" />
+                            <div>
+                                <span class="card-tag">Saúde</span>
+                                <p class="card-date">Segunda - 04/03/2024</p>
+                            </div>
+                        </div>
+
+                        <div class="card-especial-content">
+                            <h3 class="card-especial-title">Dengue: clima, água parada e falhas do poder público
+                                causaram
+                                explosão
+                                de casos</h3>
+                            <p class="card-especial-text">Tudo indica que o Brasil enfrentará em 2024 a pior epidemia de
+                                dengue
+                                da história.</p>
+                            <div class="card-especial-info">
+                                Saiba mais
+                                <i class="fa-solid fa-circle-info"></i>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="card-especial" href="#">
+                        <div class="card-especial-header">
+                            <img class="img-especial" src="img/especial1.png" alt="Imagem da notícia" />
+                            <div>
+                                <span class="card-tag">Saúde</span>
+                                <p class="card-date">Segunda - 04/03/2024</p>
+                            </div>
+                        </div>
+
+                        <div class="card-especial-content">
+                            <h3 class="card-especial-title">Dengue: clima, água parada e falhas do poder público
+                                causaram
+                                explosão
+                                de casos</h3>
+                            <p class="card-especial-text">Tudo indica que o Brasil enfrentará em 2024 a pior epidemia de
+                                dengue
+                                da história.</p>
+                            <div class="card-especial-info">
+                                Saiba mais
+                                <i class="fa-solid fa-circle-info"></i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
