feat: add section gallery

--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
         </div>
     </main>
 
+    <!-- WEB STORIES/ESPECIALS-->
     <section class="story-especial">
         <div class="container section-wrapper">
             <!-- ### WEB STORIES ### -->
@@ -356,6 +357,75 @@
                         </div>
                     </a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gallery">
+        <div class="container">
+            <div class="title">
+                <span></span>
+                <h1>Galeria</h1>
+                <span></span>
+            </div>
+
+            <!-- Swiper Gallery -->
+            <div class="swiper swiperGallery" id="swiper-gallery">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="info-container top">
+                            <a href="https://www12.senado.leg.br/fotos/busca">Imagens do Senado</a>
+                            <div class="others">
+                                <a href="https://www12.senado.leg.br/fotos/busca">Banco de Imagens |</a>
+                                <a href="https://www12.senado.leg.br/noticias/galerias">Galeria |</a>
+                                <a href="https://www.instagram.com/agenciasenado/">Instagram</a>
+                            </div>
+                        </div>
+                        <img src="img/img3.jpg" alt="Congresso Nacional" />
+                        <div class="info-container bottom">
+                            <p>(08/03/2024) Projeção alusiva ao Dia Internacional da Mulher na fachada do Palácio do
+                                Congresso.</p>
+                            <span>Foto: Jonas Pereira/Agência Senado</span>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="info-container top">
+                            <a href="https://www12.senado.leg.br/fotos/busca">Imagens do Senado</a>
+                            <div class="others">
+                                <a href="https://www12.senado.leg.br/fotos/busca">Banco de Imagens |</a>
+                                <a href="https://www12.senado.leg.br/noticias/galerias">Galeria |</a>
+                                <a href="https://www.instagram.com/agenciasenado/">Instagram</a>
+                            </div>
+                        </div>
+                        <img src="img/img4.jpg" alt="Congresso Nacional" />
+                        <div class="info-container bottom">
+                            <p>(06/03/2024) Visão geral da bancada do Plenário durante sessão de premiações e
+                                condecorações</p>
+                            <span>Foto: Geraldo Magela/Agência Senado</span>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="info-container top">
+                            <a href="https://www12.senado.leg.br/fotos/busca">Imagens do Senado</a>
+                            <div class="others">
+                                <a href="https://www12.senado.leg.br/fotos/busca">Banco de Imagens |</a>
+                                <a href="https://www12.senado.leg.br/noticias/galerias">Galeria |</a>
+                                <a href="https://www.instagram.com/agenciasenado/">Instagram</a>
+                            </div>
+                        </div>
+                        <img src="img/img5.jpg" alt="Congresso Nacional" />
+                        <div class="info-container bottom">
+                            <p>(06/03/2024) Visão geral da mesa do Plenário durante sessão de premiações e condecorações
+                            </p>
+                            <span>Foto: Geraldo Magela/Agência Senado</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
