feat: add footer

--- a/index.html
+++ b/index.html
@@ -508,6 +508,94 @@
         </div>
     </section>
 
+    <!--### FOOTER ###-->
+    <footer>
+        <div class="container footer-top">
+            <div class="col">
+                <h4>Servidores</h4>
+                <ul>
+                    <li><a href="https://www12.senado.leg.br/institucional/pessoas/pessoas">Servidor efetivo</a></li>
+                    <li><a href="https://www12.senado.leg.br/institucional/pessoas/pessoas">Servidor comissionado</a>
+                    </li>
+                    <li><a href="https://www12.senado.leg.br/institucional/pessoas/pessoas">Servidor aposentado</a></li>
+                    <li><a href="https://www12.senado.leg.br/institucional/pessoas/pessoas">Pensionista</a></li>
+                </ul>
+            </div>
+
+            <div class="col">
+                <h4>Expediente</h4>
+                <ul>
+                    <li><a href="https://www12.senado.leg.br/noticias/quem-somos">Quem somos?</a></li>
+                    <li><a href="https://www12.senado.leg.br/noticias/fale-conosco">Fale conosco</a></li>
+                    <li><a href="https://www12.senado.leg.br/noticias/politica-de-uso">Política de uso</a></li>
+                    <li><a href="https://www12.senado.leg.br/noticias/politica-de-uso-das-redes-sociais">Política de uso
+                            para redes sociais</a></li>
+                </ul>
+            </div>
+
+            <div class="col">
+                <h4>Idiomas</h4>
+                <ul>
+                    <li><a
+                            href="https://www12.senado.leg.br/institucional/carta-de-servicos/en/carta-de-servicos">ENGLISH</a>
+                    </li>
+                    <li><a
+                            href="https://www12.senado.leg.br/institucional/carta-de-servicos/es/carta-de-servicos">ESPAÑOL</a>
+                    </li>
+                    <li><a
+                            href="https://www12.senado.leg.br/institucional/carta-de-servicos/fr/carta-de-servicos">FRANÇAIS</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col">
+                <h4>Recursos</h4>
+                <ul>
+                    <li><a
+                            href="https://adm.senado.gov.br/cas-server/login?service=https%3A%2F%2Fintranet.senado.leg.br%2Fauth">
+                            <i class="fa-solid fa-lock"></i>
+                            Intranet
+                        </a></li>
+                    <li><a href="https://www12.senado.leg.br/institucional/falecomosenado">
+                            <i class="fa-solid fa-phone-volume"></i>
+                            Fale com o Senado
+                        </a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-middle">
+            <div class="icons">
+                <a href="https://www.camara.leg.br/"><img src="img/icon-camara.svg"
+                        alt="Icone da Câmara dos Deputados" /></a>
+                <a href="https://www.congressonacional.leg.br/"><img src="img/icon-congresso.svg"
+                        alt="Icone da Congresso Nacional" /></a>
+                <a href="https://portal.tcu.gov.br/inicio/index.htm"><img src="img/icon-tcu.svg"
+                        alt="Icone da TCU" /></a>
+            </div>
+            <p>Senado Notícias, cobertura textual e fotográfica de todas as atividades legislativas do Senado Federal,
+                contribuindo para a transparência da Casa e para o fortalecimento da democracia.</p>
+
+            <div class="socials">
+                <a href="https://www12.senado.leg.br/noticias/whatsapp" target="_blank"><i
+                        class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://twitter.com/senadofederal" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.youtube.com/user/TVSenadoOficial" target="_blank"><i
+                        class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.facebook.com/SenadoFederal/" target="_blank"><i
+                        class="fa-brands fa-facebook"></i></a>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="address">
+                <i class="fa-solid fa-location-dot"></i>
+                <span>Senado Federal - Praça dos Três Poderes - Brasília DF - CEP 70165-900 | Telefone: 0800 0 61
+                    2211</span>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
