feat: add floating buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- HEADER -->
     <header>
         <!-- HEADER TOP -->
-        <div class="header-top">
+        <div id="header" class="header-top">
             <div class="language">
                 <img src="https://flagsapi.com/BR/shiny/64.png" />
                 <span>Português</span>
@@ -610,6 +610,16 @@
             </div>
         </div>
     </footer>
+
+    <!--### BUTTON TO UP ###-->
+    <a href="#header" class="btn-up">
+        <i class="fa-solid fa-circle-arrow-up"></i>
+    </a>
+
+    <!--### BUTTON LIBRAS ###-->
+    <a href="#" class="btn-libras">
+        <img src="img/libras.png" alt="Acessibilidade" />
+    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
